[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "md tester"
version = "0.1.0"
description = "Test environment for different markdown configurations and setup"
authors = ["Warner Leijenaar <git@renraw.nl>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
matplotlib = "*"
pandas = "*"
tqdm = "*"
openpyxl = "*"
result = "*"
entangled-cli = {extras = ["rich"], version = "*"}
pymarkdownlnt = "^0.9.15"


[tool.poetry.group.dev.dependencies]
ruff = "*"
isort = "*"
black = "*"
interrogate = "*"
pre-commit = "*"


[tool.poetry.group.test.dependencies]
hypothesis = "*"
pytest = "*"
pytest-mock = "*"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"


[tool.pytest.ini_options]
# asyncio_mode = "auto"
# addopts = "--no-cov-on-fail --showlocals --strict-markers"
addopts = "--showlocals --strict-markers"
testpaths = ["tests"]
norecursedirs = "_build var* .*cache .vscode .venv"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "utils",
]


[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true


[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
   \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | \.vscode
  | build
  | dist
  | var
)/
'''


[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "builder, tests"
line_length = 88
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true
profile = "black"


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["docs", "build", ".venv", "var", ".*_cache"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
# generate-badge = "."
# badge-format = "svg"


[tool.ruff]
select = ["E", "F"]
ignore = []
line-length = 88


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"


# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


# pymarkdownlnt configuration (yes both are correct
# ref. https://github.com/jackdewinter/pymarkdown/blob/main/docs/advanced_configuration.md#alternate-project-configuration-files
[tool.pymarkdown]
log = {level = "WARNING", stack-trace = false}

[tool.pymarkdown.extensions]
markdown-disallow-raw-html = {enabled = true}
front-matter = {enabled = true}
# markdown-task-list-items = {enabled = true}

[tool.pymarkdown.plugins]
# Enabled rules, with some configuration
emphasis-style = {enabled = true, style = "underscore"}
heading-style = {enabled = true, style = "atx"}
ul-indent = {enabled = true, indent = 4}

# disabled rules
code-block-style = {enabled = false}
fenced-code-language = {enabled = false}
line-length = {enabled = false}
no-blanks-blockquote = {enabled = false}
no-duplicate-header = {enabled = false}
ol-prefix = {enabled = false}
single-h1 = {enabled = false}


[[tools.entangled]]
version = "2.0"
watch_list = ["docs/**/*.md", "*.md"]
# hooks = ["build"]
hooks = ["quatro_attributes", "brei"]


[[tools.entangled.languages]]
name = "python"
identifiers = ["python"]
comment = { open = "#" }
